tdf#165206 Do not change alignment after direction change commands

Previously, the UNO commands to change paragraph direction could also
affect paragraph alignment in certain situations. For example, a
left-aligned LTR paragraph would become right-aligned after a switch to
RTL. This was done in order to smooth over usability rough edges due to
the lack of native start/end paragraph alignment.

We now support start/end paragraph alignment, and encourage its use by
default. This extra alignment change is no longer necessary.

Change-Id: I90b96c28e194e37fe0e782c054f6f7efdd4bf739
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/198597
Reviewed-by: Jonathan Clark <jonathan@libreoffice.org>
Tested-by: Jenkins